# shadPS5

./: CMakeLists.txt  main.cpp
src/: shadPS5.rc
src/core/common/: types.h
src/core/loader/: param_json_parser.h
